@@ -9,8 +9,6 @@ cp -r ../misc/native package/p4xdp/
 cp ../misc/openwrt-p4xdp/* package/p4xdp/
 cd package/p4xdp/native
 patch < ../insns.patch
-patch < ../nohw1.patch
-patch < ../nohw2.patch
 cd ../../..
 make package/p4xdp/compile
 
