@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.2.17-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-02-17 08:52:15, took 00:07:52, with 60 workers, on 534 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2024-02-17 12:52:27, took 00:10:07, with 60 workers, on 534 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
